Add explore of acceleration (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -864,6 +864,89 @@ di dirigere la curiosità dei propri alunni sui moti accelerati.
 
 \section{Explore}
 
+In questa fase il professore propone agli alunni diverse attività da svolgere a
+casa per arrivare alla comprensione dei concetti citati ad inizio Capitolo \ref{accelerazione}.
+
+\section{Moto di un Corpo su un Piano Inclinato}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Bicicletta/Skateboard/Pattini a Rotelle; Cronometro,
+Nastro adesivo, Bindella.
+\end{itemize}
+
+Il professore chiede agli studenti di percorrere una rampa o
+una discesa il più possibile regolare per mezzo di una bicicletta (skateboard o
+monopattino), lungo la quale sono stati precedentemente applicati dei pezzi di nastro
+adesivo equidistanti tra loro (si veda la Figura \ref{fig:bicicletta_rampa}).
+\begin{figure}[H]
+\centering
+  \includegraphics[width=\textwidth]{bicicletta_rampa}
+  \caption{Un esempio di discesa regolare sulla quale è stata fissata
+           una scala con del nastro adesivo.
+          }
+  \label{fig:bicicletta_rampa}
+\end{figure}
+Lo studente dovrà misurare con una bindella (o strumenti analoghi)
+la distanza tra le strisce e con un cronometro gli intervalli di tempo che egli impiega
+per percorrere ciascun tratto, riportando le misure in una tabella.
+Il docente sottolinea l’importanza di partire da fermi alla sommità della
+discesa, e per guidare gli studenti  mostra alla classe un filmato
+dell’esperimento, realizzato da lui stesso in precedenza
+\footnote{
+          Un esempio di video può essere scaricato presso
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/bicletta_rampa.mp4?raw=true}{questo indirizzo web}}.
+         }.
+
+\section{Dal Moto al Grafico delle Velocità Medie}
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 15\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Foglio, Righello
+\end{itemize}
+
+La presente attività si basa sulla precedente.
+L’insegnante chiede agli studenti di disegnare un grafico che rappresenti sull'asse
+delle ascisse
+la successione dei tratti (tratto 1, tratto 2 \dots tratto N) definiti
+dalle strisce di nastro adesivo applicate alla rampa
+(la grandezza rappresentata sull'asse sarà dunque un numero puro) e
+in ordinata le velocità medie corrispondenti ai suddetti tratti. L'obiettivo
+di questa attività è di far notare agli studenti che le velocità variano e non
+restano costanti (come nell'esperimento della biglia) e di permettere di osservare
+la natura di tale variazione.
+Il professore disegna alla lavagna un esempio del grafico che gli studenti
+dovranno ottenere e ascolta le domande degli studenti in merito.
+
+\section{Dal Moto al Grafico dello Spostamento in Funzione del Tempo}
+
+\begin{itemize}
+\item \textbf{Tempo richiesto in aula:} 10\textsuperscript{$\prime$}
+\item \textbf{Materiale:} Foglio, Righello
+\end{itemize}
+
+L’ultima attività proposta consiste nel realizzare un ulteriore grafico:
+occorre riportare su un piano posizione-tempo le
+posizioni dei pezzi di nastro adesivo sulla rampa e i rispettivi istanti di
+tempo ai quali essi sono stati attarversati dalla bicletta. L’insegnante
+chiarisce che la posizione di ciascun pezzo di nastro è
+ottenuta sommando le distanze percorse precedentemente e che i tempi
+corrispondenti sono a loro volta somma degli intervalli di tempo precedenti.
+Inoltre è richiesto di provare a tracciare una curva che passi per questi
+punti. Il Professore non svela agli studenti come svolgere quest’ultima
+attività, in quanto desidera che essi riflettano sull'esperienza sensoriale
+provata durante l’esperimento, focalizzandosi sul moto in ciascun
+tratto e nel suo insieme.
+
+\section{Attività Bonus in Presenza}
+Qualora l’insegnante la lezione si svolga in presenza, un'attività aggiuntiva da
+proporre potrebbe essere la caduta di un carrello lungo un piano inclinato
+alla cui base è presente un sensore di prossimità. Quest’ultimo è programmato
+per misurare con una certa frequenza lo spazio percorso.
+Il fenomeno fisico in studio è analogo a quello della bicicletta sulla rampa,
+ma in questo caso vengono fissati gli
+intervalli di tempo, focalizzando l’attenzione degli studenti sulla variazione
+delle distanze percorse nei diversi tratti.
+
 \section{Explain}\label{a_explain}
 
 \section{Extend}
