Add evaluate of acceleration (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -1048,6 +1048,12 @@ scivolando?''. In questo modo egli guida gli studenti verso
 la realizzazione che un corpo avente velocità nulla ad un certo
 istante, non necessariamente deve avere anche un'accelerazione nulla.
 
+\section{Evaluate}
+Per la valutazione di questo terzo modulo del percorso il docente tiene conto
+dell'impegno impiegato nello svolgere le attività assegnate come compiti a casa,
+del lavoro svolto sui grafici e sull'esperimento, e del coinvolgimento attivo
+all’interno dei gruppi di discussione.
+
 \appendix
 \chapter{Grafici per le Attività Cinestetiche}\label{appendix_kine}
 Sono qui presentati alcuni esempi di grafici che il docente può
