Fix typos about parentheses (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -142,7 +142,7 @@ occorrono chiari riferimenti spaziali e temporali.
 \section{Explore}
 Questa fase viene svolta da ciascun studente a casa. Il professore propone agli
 alunni tre attività distinte, attraverso le quali possano arrivare a
-comprendere i concetti citati precedentemente (Inizio Capitolo \ref{posizioni_istanti}).
+comprendere i concetti citati precedentemente (inizio Capitolo \ref{posizioni_istanti}).
 
 In primo luogo gli
 studenti dovrebbero cogliere il significato di istante di tempo, o meglio
@@ -205,7 +205,7 @@ posta sul fuoco o episodi di vita quotidiana (Figura \ref{fig:asse_t_pentola}).
 
 Come seconda attività viene chiesto di scegliere un punto di partenza su un
 corso o una via ed esplorarla camminando, fotografando palazzi o altri oggetti
-incontrati (almeno 3 oggetti distinti). In seguito si disegni una linea su un
+incontrati (almeno tre oggetti distinti). In seguito si disegni una linea su un
 foglio e si incollino le diverse fotografie in base alla disposizione dei
 soggetti immortalati lungo la via. Anche in questo caso non occorre che la
 linea presenti una scala, in quanto l’obiettivo del lavoro è comprendere il
@@ -213,7 +213,7 @@ concetto di posizione di un corpo nello spazio e, in modo qualitativo, della
 posizione relativa rispetto ad altri oggetti.
 
 Anche in questo caso occorre che il professore mostri almeno uno più esempi
-(Si veda la Figura \ref{fig:asse_s}).
+(si veda la Figura \ref{fig:asse_s}).
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{asse_s}
@@ -479,7 +479,7 @@ casa per arrivare a comprendere i concetti citati ad inizio Capitolo
 
 Per la prima attività l’insegnante mostra agli studenti un piano cartesiano su
 cui sono posizionati alcuni punti e i cui assi rappresentano spostamento e
-tempo (Vedi Figura \ref{fig:kine_plot1}).
+tempo (si veda la Figura \ref{fig:kine_plot1}).
 \begin{figure}[ht]
 \centering
   \includegraphics[width=\textwidth]{kine_plot1}
@@ -488,7 +488,7 @@ tempo (Vedi Figura \ref{fig:kine_plot1}).
   \label{fig:kine_plot1}
 \end{figure}
 Successivamente egli inquadra con la telecamera la sua mano
-poggiata sul bordo del tavolo di lavoro (Come in  Figura \ref{fig:kine_hand}),
+poggiata sul bordo del tavolo di lavoro (come in  Figura \ref{fig:kine_hand}),
 \begin{figure}[H]
 \centering
   \includegraphics[width=\textwidth]{kine_hand}
@@ -513,10 +513,10 @@ dispositivo che aiuti a scandire il tempo, quale per esempio un metronomo. Nel
 caso in cui sia possibile la didattica in presenza, l’attività verrà mostrata
 disegnando il grafico alla lavagna e poggiando la mano sul bordo della
 cattedra. Il professore mostra la medesima attività, usando un paio di grafici
-più complessi, in cui non vi sono più solo dei punti, ma delle curve (Vedi Figura
+più complessi, in cui non vi sono più solo dei punti, ma delle curve (vedi Figura
 \ref{fig:kine_plot3}).
 Viene chiesto agli studenti di ripetere a casa l’attività usando
-nuovi grafici analoghi (Si veda l'Appendice \ref{appendix_kine}) e riprendendo
+nuovi grafici analoghi (si veda l'Appendice \ref{appendix_kine}) e riprendendo
 per ciascuno la propria mano in movimento.
 Nella consegna viene richiesto anche
 di scegliere uno dei grafici e di descrivere per iscritto il moto osservato della
@@ -762,7 +762,7 @@ più lucida di questa realizzazione, utilizzando il software
           \textcolor{blue}{\href{https://www.geogebra.org/}{questo sito web}}.
          }.
 Egli disegna con il programma un ramo di parabola con concavità
-verso il basso e lo mostra agli studenti (Si veda la Figura
+verso il basso e lo mostra agli studenti (si veda la Figura
 \ref{fig:geogebra}), chiedendo di immaginare che questo grafico
 rappresenti il moto di Felix nella stratosfera.
 \begin{figure}[H]
@@ -803,7 +803,7 @@ della secante è cambiata e questa si avvicina sempre più alla curva.
 Il professore ripete l'operazione altre due o
 tre volte, avvicinando sempre di più i punti A e B (permettendo ai ragazzi
 ogni volta di osservare la nuova retta secante) fino a che i due punti
-coincidono (Come si vede nella Figura \ref{fig:geogebra}).
+coincidono (come si vede nella Figura \ref{fig:geogebra}).
 
 Il professore suggerisce agli studenti che ora la retta rappresentata nel grafico
 è la retta tangente alla curva nel punto A, e chiede agli studenti se questa possa
@@ -820,7 +820,7 @@ partecipazione degli studenti alle varie attività proposte a casa e in classe,
 del lavoro svolto sui grafici e i video richiesti, e del loro coinvolgimento attivo
 all’interno dei gruppi di discussione.
 
-\chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}
+\chapter{Accelerazione, Moto Rettilineo Uniformemente Accelerato}\label{accelerazione}
 Nel presente modulo lo studente familiarizza con il concetto di accelerazione
 media e con la legge oraria del moto uniformemente accelerato.
 Infine egli giunge ad una comprensione più profonda della differenza
@@ -976,7 +976,7 @@ bicicletta, perché possa essere studiato con l'applicazione per smartphone
 \emph{Phyphox}
 \footnote{
           Phyphox è un applicazione \emph{Free Software} per dispositivi mobili
-          (Sistemi supportati Android e IOS) che trasforma il proprio
+          (sistemi supportati Android e IOS) che trasforma il proprio
           smartphone in un piccolo laboratorio di fisica. Maggiori
           informazioni e documentazione sono reperibili presso
           \textcolor{blue}{\href{https://phyphox.org/}{questa pagina web}}.
