Add nocite refs (porgetto finale)

--- a/progetto_finale/bibliografia.bib
+++ b/progetto_finale/bibliografia.bib
@@ -56,3 +56,20 @@
   howpublished = {\url{https://youtu.be/74MUjUj7bp8}},
   note = {Data consultazione: 2021-02-01}
 }
+@article{trowbridge1980investigation,
+  title={Investigation of student understanding of the concept of velocity in one dimension},
+  author={Trowbridge, David E and McDermott, Lillian C},
+  journal={American journal of Physics},
+  volume={48},
+  number={12},
+  pages={1020--1028},
+  year={1980},
+  publisher={American Association of Physics Teachers}
+}
+@book{bernardini2012thinking,
+  title={Thinking physics for teaching},
+  author={Bernardini, Carlo and Tarsitani, Carlo and Vicentini, Matilde},
+  year={2012},
+  publisher={Springer Science \& Business Media},
+  note={Capitolo 2}
+}
