--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -1124,6 +1124,10 @@ utilizzare per le attività cinestetiche.
   \label{tab:fit_bike}
 \end{table}
 
+% Articoli non citati nel testo ma consultati
+\nocite{trowbridge1980investigation}
+\nocite{bernardini2012thinking}
+
 \bibliography{bibliografia}{}
 \bibliographystyle{plain}
 \addcontentsline{toc}{chapter}{Riferimenti}
