Add engage of velocity (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -413,14 +413,14 @@ biglia che cade) (Figura \ref{fig:liquids}).
 Le biglie utilizzate devono essere tutte uguali tra loro per massa e dimensione.
 \begin{figure}[H]
 \centering
-  \begin{subfigure}[b]{0.5\textwidth}
-  \includegraphics[width=\textwidth]{cat_caviar}
+  \begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{detersivo}
   \end{subfigure}
-  \begin{subfigure}[b]{0.5\textwidth}
-  \includegraphics[width=\textwidth]{cat_caviar}
+  \begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{acqua}
   \end{subfigure}
-  \begin{subfigure}[b]{0.5\textwidth}
-  \includegraphics[width=\textwidth]{cat_caviar}
+  \begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{olio}
   \end{subfigure}
   \caption{
            I tre contenitori riempiti con i liquidi
@@ -457,11 +457,11 @@ viscosità molto diversa
 \footnote{
           \`E possibile scaricare il video della biglia che
           cade nel detersivo presso
-          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/biglia_detersivo.mp4?raw=true}{questo indirizzo web}}.
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/velocity_engage_videos/detersivo.mp4?raw=true}{questo indirizzo web}}.
           Lo stesso esperimento con acqua si può trovare
-          \textcolor{blue}{\href{http://burymewithmymoney.com/}{qui}},
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/velocity_engage_videos/acqua.mp4?raw=true}{qui}},
           e
-          \textcolor{blue}{\href{http://burymewithmymoney.com/}{qui}}
+          \textcolor{blue}{\href{https://github.com/savaroskij/PED1/blob/master/progetto_finale/media/video/velocity_engage_videos/olio_semi.mp4?raw=true}{qui}}
           quello con olio di semi.
          }.
 
