Specify Free Sosftware for GeoGebra (progetto finale)

--- a/progetto_finale/progetto_finale.tex
+++ b/progetto_finale/progetto_finale.tex
@@ -756,7 +756,8 @@ Il professore aiuta gli studenti a giungere ad una comprensione
 più lucida di questa realizzazione, utilizzando il software
 \emph{GeoGebra}
 \footnote{
-          GeoGebra è una suite di programmi per la didattica della matematica
+          GeoGebra è una suite \emph{Free Software} di programmi per la didattica della
+          matematica
           disponibile per iOS, Android, GNU/Linux, Windows, Mac OS, Chromebook.
           Per maggiori informazioni, si visiti
           \textcolor{blue}{\href{https://www.geogebra.org/}{questo sito web}}.
